--- a/src/pages/tarot.astro
+++ b/src/pages/tarot.astro
@@ -649,7 +649,7 @@ const schema = {
 const N8N_WEBHOOK_URL = 'https://n8n.n8ntuanphangz.xyz/webhook/2a1c95d5-dd30-4710-9f1c-f9c45686f218'; // !!! THAY THẾ URL CỦA BẠN !!!
 
 // (MỚI - QUAN TRỌNG) URL Webhook để *kiểm tra* câu hỏi
-const N8N_VALIDATE_URL = 'https://n8n.n8ntuanphangz.xyz/webhook/fe3c376f-62f2-472d-ac01-d39ba5496e75'; // !!! BẠN PHẢI THAY THẾ URL NÀY !!!
+const N8N_VALIDATE_URL = '/api/tarot-validate'; // !!! BẠN PHẢI THAY THẾ URL NÀY !!!
 
 // (MỚI) Di chuyển SHEET_ID ra ngoài để dùng chung
 const SHEET_ID = '1Bqu2RBPRH-YeCOiX_5SjmQP8GETpKkqBZhMPZwqm_ig';
