--- a/src/pages/tarot.astro
+++ b/src/pages/tarot.astro
@@ -198,7 +198,7 @@ const schema = {
     <link rel="preload" href="/card-back.jpg" as="image">
 
     <!-- Nhúng lại logic Tarot Game tại đây để đảm bảo chạy đúng -->
-    <script src="/tarot.js" defer></script>
+    <!--<script src="/tarot.js" defer></script>-->
 
     <style is:inline>
         /* === CẤU TRÚC CHUNG === */
