--- a/src/pages/tarot.astro
+++ b/src/pages/tarot.astro
@@ -649,7 +649,7 @@ const schema = {
 const N8N_WEBHOOK_URL = '/api/tarot-interpret'; // !!! THAY THẾ URL CỦA BẠN !!!
 
 // (MỚI - QUAN TRỌNG) URL Webhook để *kiểm tra* câu hỏi
-const N8N_VALIDATE_URL = '/api/tarot-validate'; // !!! BẠN PHẢI THAY THẾ URL NÀY !!!
+const N8N_VALIDATE_URL = '/.netlify/functions/tarot-validate'; // !!! BẠN PHẢI THAY THẾ URL NÀY !!!
 
 // (MỚI) Di chuyển SHEET_ID ra ngoài để dùng chung
 const SHEET_ID = '1Bqu2RBPRH-YeCOiX_5SjmQP8GETpKkqBZhMPZwqm_ig';
