--- a/src/components/OracleChat.astro
+++ b/src/components/OracleChat.astro
@@ -350,7 +350,7 @@
 
 <script>
   // --- CONFIG ---
-  const N8N_WEBHOOK_URL = 'https://n8n.n8ntuanphangz.xyz/webhook/1edf60a9-32a8-40cf-b9a7-a067487868fd';
+  const N8N_WEBHOOK_URL = '/.netlify/functions/chat';
   const HISTORY_KEY = 'phogo_tarot_chat_history';
   const SESSION_KEY = 'phogo_tarot_session';
   
